btn in LockIn no longer clickabel: fixed by adjusting z-index

--- a/styles/respIndex.css
+++ b/styles/respIndex.css
@@ -42,14 +42,17 @@
 @keyframes changeTransparency {
     0% {
         opacity: 1;
+        z-index: 11;
     }
 
     50% {
         opacity: 0;
+        z-index: 11;
     }
 
     100% {
         opacity: 0;
+        z-index: -11;
     }
 }
 
